--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name=".Proveedor"
+            android:authorities="com.arp.practicacontent.Proveedor"
+            android:exported="false" />
+        <provider
+            android:name=".ProveedorCancion"
+            android:authorities="com.arp.practicacontent.ProveedorCancion"
+            android:exported="false" />
+        <provider
+            android:name=".ProveedorDisco"
+            android:authorities="com.arp.practicacontent.ProveedorDisco"
+            android:exported="false" />
         <activity android:name=".MainActivity">
-            <provider
-                android:name=".MusicaAndroid"
-                android:authorities="com.arp.practicacontent.Proveedor"
-                android:exported="false" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
